--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  overflow-y: scroll;
   line-height: 1.5;
   font-weight: 400;
 
@@ -11,18 +11,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  --tea-green: #def6caff;
-  --pink: #f8bdc4ff;
-  --plum-web: #f497daff;
-  --violet-web-color: #f679e5ff;
-  --purple-pizzazz: #f65be3ff;
-
-  /* Optional utility colors */
-  --text-color: var(--black-pizzazz);
-  --bg-color: var(--tea-green);
-  --primary-color: var(--plum-web);
-  --accent-color: var(--pink);
 }
 
 body {
@@ -35,14 +23,4 @@ h2,
 h3,
 a {
   font-family: 'Outfit', sans-serif;
-}
-
-body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  font-family: system-ui, sans-serif;
-}
-
-a {
-  color: var(--primary-color);
 }
